--- a/javascript/package.json
+++ b/javascript/package.json
@@ -4,8 +4,8 @@
   "description": "Kata for a legacy code. The objective is to write tests and refactor the given legacy code.",
   "scripts": {
     "test": "jest",
-    "tdd": "jest -w",
-    "coverage": "jest -coverage"
+    "tdd": "jest --watch",
+    "coverage": "jest --coverage"
   },
   "devDependencies": {
     "jest": "23.4.2",
